--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -32,46 +32,32 @@
 
 .chat-user-chats {
   max-width: 400px;
+  width: 60vw;
   display: flex;
-  margin: 10px auto;
+  margin: 0 auto;
   border-radius: 10px;
   flex-direction: row;
   padding: 10px;
+  padding-bottom: 5px;
   background-color: rgb(106, 145, 117);
   cursor: pointer;
 }
 
 .chat-last-msg {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.chat-last-msg-left {
-  margin-left: 10px;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: flex-start; */
   text-align: left;
-
-  /* margin: auto 0; */
-}
-
-.chat-msg-date {
-  margin: 0;
+  word-break: break-all;
 }
 
 .msg-container {
   position: relative;
-  /* margin: 0 20px; */
+  max-width: 400px;
+  width: 60vw;
   padding: 10px 0;
-  /* width: 40%; */
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  /* justify-content: space-between; */
+  word-break: break-all;
 }
 
 .msg-cnt-reciv {
@@ -86,12 +72,12 @@
   flex-direction: column;
   padding: 0 10px;
   border-radius: 10px;
-  /* border-width: 2px; */
-  /* border-color: black; */
 }
 
 .msg-body p {
   margin: 5px 0;
+  word-wrap: break-word;
+  max-width: 60vw;
 }
 
 .msg-body-reciv {
